--- a/index.html
+++ b/index.html
@@ -19,23 +19,19 @@
 	  	<div class="collapse navbar-collapse" id="navbarSupportedContent">
 	    	<ul class="navbar-nav mr-auto">
 	      		<li class="nav-item active">
-	        		<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+	        		<a class="nav-link" href="/index">Home <span class="sr-only">(current)</span></a>
 	      		</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">Link</a>
+					<a class="nav-link" href="/games">Games</a>
 				</li>
 				<li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Contact
 					</a>
 					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-						<a class="dropdown-item" href="#">Action</a>
-						<a class="dropdown-item" href="#">Another action</a>
-						<div class="dropdown-divider"></div>
-						<a class="dropdown-item" href="#">Something else here</a>
+						<a class="dropdown-item" href="https://www.linkedin.com/in/kimkevin7704/">LinkedIn</a>
+						<a class="dropdown-item" href="https://github.com/kimkevin7704/">GitHub</a>
+						<a class="dropdown-item" href="https://www.youtube.com/channel/UC1SL40uZ7lhWSS8cRQqSrZA">YouTube</a>
 					</div>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link disabled" href="#">Disabled</a>
 				</li>
 			</ul>
 	    	<form class="form-inline my-2 my-lg-0">
