about.html and index jumbotron added

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 	      		<li class="nav-item active">
 	        		<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
 	      		</li>
+				<li class="nav-item">
+					<a class="nav-link" href="about.html">About</a>
+				</li>
 	      		<li class="nav-item">
 					<a class="nav-link" href="projects.html">Projects</a>
 				</li>
@@ -39,7 +42,12 @@
 			</ul>
 	  	</div>
 	</nav>
-
+	<div class="jumbotron">
+		<h1 class="display-4">Welcome!</h1>
+			<p class="lead">My name is Kevin Kim and I'm a recently graduated software engineer and aspiring game developer!</p>
+		<hr class="my-4">
+			<p>Check out some of my projects, demos, and videos and have fun!</p>
+	</div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
