--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
   	</head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-	  	<a class="navbar-brand" href="#">Games</a>
+	  	<a class="navbar-brand" href="#">About Me!</a>
 	  	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 	    	<span class="navbar-toggler-icon"></span>
 		</button>
@@ -21,7 +21,7 @@
 	      		<li class="nav-item active">
 	        		<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
 	      		</li>
-	      		<li class="nav-item">
+				<li class="nav-item">
 					<a class="nav-link" href="about.html">About</a>
 				</li>
 	      		<li class="nav-item">
@@ -42,7 +42,6 @@
 			</ul>
 	  	</div>
 	</nav>
-
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
