images and about updated

--- a/about.html
+++ b/about.html
@@ -42,6 +42,16 @@
 			</ul>
 	  	</div>
 	</nav>
+	<div class="media">
+		<img class="align-self-start mr-3" src="images/kevin.jpeg" alt="it's me!">
+			<div class="media-body">
+				<h5 class="mt-0">Hi there!</h5>
+				<p>My name is Kevin Kim and I'm an aspiring game developer, software engineer, musician, and orca enthusiast.</p>
+				<p>In 2010 after graduating with a degree in Biology, I realized my true passion was in gaming. I was in the intense business of slaying nerds and stealing ladder points until I realized I wanted to build dope stuff. In 2012, I purchased an Oculus Rift for development purposes and moved to Texas to pursue an education in Computer Science. After finding other students who shared the same passion for virtual/augmented reality that I had, I founded the Virtual Reality Development Group and began working at the Virtual Reality Technology Lab at Texas State University. Now, as a recently graduated software engineer, I am continuing my pursuit towards glorious ownage as a game developer.</p>
+				<p>Currently, I am working on personal projects and pursuing my next venture! Life's a trip and I'm stoked for whats next!</p>
+			</div>
+	</div>
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
